# agent-shield

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
agent_shield/: __init__.py  __main__.py  commands.py
agent_shield/api/: api.py
agent_shield/guardian_ai/: __init__.py  guardian_ai.py  guardian_category.py  llm_base.py  prompt.py
agent_shield/ui/: ui.py
logs/: __init__.py  create_logs.py  remove_log_folders.py
public/: test.js
